--- a/style.css
+++ b/style.css
@@ -1,62 +1,74 @@
-
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
-
-body{
-    background: linear-gradient(90deg, rgb(197, 107, 197, 0.6), rgb(209, 150, 83, 0.8) , rgb(156, 120, 206)) ;
-}
-
-.container{
+  }
+  
+  body {
+    background-color: #e0e0e0;
+  }
+  
+  .card {
+    border-radius: 28px;
+    background: #e0e0e0;
+    box-shadow: 9px 9px 13px #c1c1c1, -9px -9px 13px #ffffff;
+  }
+  
+  .container {
     margin-top: 60px;
-}
-
-label{
+  }
+  
+  label {
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: rgb(49, 34, 34);
     font-size: small;
-}
-
-input{
-    font-weight: 400;
-    outline: 1px solid black;
+  }
+  
+  input,
+  select {
+    background: #ecf0f3;
+    padding: 10px;
+    padding-left: 20px;
+    margin-right: 0%;
+    height: 3rem;
+    font-size: 1.2rem;
+    border-radius: 10px;
+    box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
     border: none;
-    font-size: 18px;
-    padding: 12px;
-    height: 30px;
-    margin: 10px;
-    display: flex;
-}
-
-.btn{
-    background-color: rgb(248, 245, 250);
+  }
+  
+  .btn {
     font-weight: 500;
-    box-shadow: 0 2px 4px rgba(124, 66, 66, 0.5);
-}
-
-.btn:hover{
-    background-color: rgb(11, 2, 15);
+    background: #0a0a0a;
     color: #fff;
-}
-
-.result{
-    border: 1px solid black;
-    /* margin-left: -3px; */
+    box-shadow: 9px 9px 13px #c1c1c1, -9px -9px 13px #ffffff;
+  }
+  
+  .btn:hover {
+    background-color: rgb(59, 54, 54);
+    color: #fff;
+  }
+  
+  .result {
     padding: 4px;
-    background-color: rgb(248, 245, 250);
-    margin-right: 0px 0px;
-}
-h4{
+    background: linear-gradient(145deg, #f0f0f0, #cacaca);
+    box-shadow: 11px 11px 13px #c7c7c7, -11px -11px 13px #f9f9f9;
+    border: none;
+  }
+  
+  h4 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    text-shadow: 2px 2px 3px #1f1e1e;
-    color: #fff;
-}
-
-@media screen and (max-width: 890px) {
-    .container{
-        margin-top: 20px;
+    position: relative;
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 1.4rem;
+    color: #350942;
+  }
+  
+  @media screen and (max-width: 890px) {
+    .container {
+      margin-top: 20px;
     }
-}
+  }
+  
